# sentiment

./: .gitignore  Dockerfile  README.md  pyproject.toml
sentiment/: parse_twitter.py
