[tool.poetry]
name = "sentiment"
version = "0.1.0"
description = ""
authors = ["D Shibanov <dmitry.shibanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
selenium = "4.11.2"
undetected-chromedriver = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
